Fixed ADA issue: product card's contrast color

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -292,7 +292,7 @@
   margin-bottom: 0;
 
   background-color: #FFF;
-  color: var(--Test-mid, #282828);
+  color: #282828;
   text-align: center;
   font-feature-settings: 'liga' off, 'clig' off;
 
@@ -311,7 +311,7 @@
 
 .card__heading a {
   background-color: #FFF;
-  color: var(--Test-mid, #282828);
+  color: #282828;
 }
 
 .card__heading:last-child {
